cambios en index

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
                 <div class="container-fluid">
                     <div class="row d-flex justify-content-evenly container-fluid">
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img" alt="Crash Tattoo" src="imagenes/sdeluxe7.png">
+                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes1.png">
                         </div>
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img" alt="Crash Tattoo" src="imagenes/sdeluxe8.png">
+                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes2.png">
                         </div>
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img" alt="Crash Tattoo" src="imagenes/sdeluxe6.png">
+                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes3.png">
                         </div>
                     </div>                       
                 </div>                   
@@ -97,13 +97,13 @@
                 <div class="container-fluid ">
                     <div class="row d-flex justify-content-evenly container-fluid">
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img"alt="SommierDeluxe"  src="imagenes/sdeluxe12.png">
+                            <img class="d-block carouselGallery__img"alt="SommierDeluxe"  src="imagenes/deluxes4.png">
                         </div>
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img" alt="SommierDeluxe"  src="imagenes/sdeluxe11.png">
+                            <img class="d-block carouselGallery__img" alt="SommierDeluxe"  src="imagenes/deluxes5.png">
                         </div>
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img" alt="SommierDeluxe"  src="imagenes/sdeluxe17.jpg">
+                            <img class="d-block carouselGallery__img" alt="SommierDeluxe"  src="imagenes/deluxes6.png">
                         </div>
                     </div>                       
                 </div>                    
@@ -113,13 +113,13 @@
                 <div class="container-fluid ">
                     <div class="row d-flex justify-content-evenly container-fluid">
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/sdeluxe20.jpg">
+                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes7.png">
                         </div>
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/sdeluxe18.jpg">
+                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes8.png">
                         </div>
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/sdeluxe11.png">
+                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes9.png">
                         </div>
                     </div>                       
                 </div>                    
@@ -129,13 +129,13 @@
                 <div class="container-fluid ">
                     <div class="row d-flex justify-content-evenly container-fluid">
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/sdeluxe18.jpg">
+                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes10.png">
                         </div>
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/sdeluxe17.jpg">
+                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes11.png">
                         </div>
                         <div class="col-4 carouselGallery__imgContainer">
-                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/sdeluxe19.jpg">
+                            <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes12.png">
                         </div>
                     </div>                       
                 </div>                    
@@ -154,10 +154,6 @@
 
 
 
-
-
-
-
     <section id="promociones">
 
         <div class="promociones__div">
@@ -166,22 +162,22 @@
 
         <div class="contenedor">
             <div class="contenedor__uno">
-                <img class="contenedor__imagenPrincipal" src="imagenes/sdeluxe8.png">
+                <img class="contenedor__imagenPrincipal" src="imagenes/promocion7.png">
                 <h2 class="contenedor__texto"> Sommier Buzios</h2>
                 <p class="contenedor__p-descripion">Mix de espumas de altidad densidad que generan un confort
                     equilibrado</p>
                 <button class="contenedor__buttoncash"> <a href="../web/contactanos.html ">COMPRAR </a></button>
             </div>
             <div class="contenedor__dos">
-                <img class="contenedor__imagenPrincipal" src="imagenes/sdeluxe7.png">
+                <img class="contenedor__imagenPrincipal" src="imagenes/promocion3.png">
                 <h2 class="contenedor__textoPrincipal"> Sommier Zafiro </h2>
                 <p class="contenedor__p-descripion">Novedosa tecnologia que permite no rotar el colchon, estructura
                     ergonomica
                     que asegura una correcta postura</p>
-                <button class="contenedor__buttoncash"> <a href="../web/contactanos.html ">COMPRAR </a></button>
+                <button class="contenedor__buttoncash"> <a href="../web/contactanos.html">COMPRAR </a></button>
             </div>
             <div class="contenedor__tres">
-                <img class="contenedor__imagenPrincipal" src="imagenes/sdeluxe6.png">
+                <img class="contenedor__imagenPrincipal" src="imagenes/promocion4.png">
                 <h2 class="contenedor__textoPrincipal">Sommier Casablanca</h2>
                 <p class="contenedor__p-descripion">Manta adicional de confort par aliviar los pntos de presion, nueva
                     tecnologia
@@ -190,7 +186,7 @@
             </div>
 
             <div class="contenedor__cuatro">
-                <img class="contenedor__imagenPrincipal" src="imagenes/sdeluxe14.png">
+                <img class="contenedor__imagenPrincipal" src="imagenes/promocion5.png">
                 <h2 class="contenedor__textoPrincipal">Sommier Casablanca</h2>
                 <p class="contenedor__p-descripion">Resortes de alta densidad aseguran una correcta postura y logran el
                     confort
@@ -199,7 +195,7 @@
             </div>
 
             <div class="contenedor__cinco">
-                <img class="contenedor__imagenPrincipal" src="imagenes/sdeluxe11.png">
+                <img class="contenedor__imagenPrincipal" src="imagenes/promocion6.png">
                 <h2 class="contenedor__textoPrincipal">Sommier Casablanca</h2>
                 <p class="contenedor__p-descripion">Nuestro sommier es una combinacion de espuma de alta densidad y
                     espuma
@@ -208,10 +204,10 @@
             </div>
 
             <div class="contenedor__seis">
-                <img class="contenedor__imagenPrincipal" src="imagenes/sdeluxe12.png">
+                <img class="contenedor__imagenPrincipal" src="imagenes/promociones7.png">
                 <h2 class="contenedor_textoPrincipal">Sommier Casablanca</h2>
                 <p class="contenedor__p-descripion">Refuerzo en la zona lumbar par mejorar la postura al descansar. Tela
-                    de punto
+                    de punto    
                     matelaseado. Hipoalergénica </p>
                 <button class="contenedor__buttoncash"> <a href="../web/contactanos.html ">COMPRAR </a></button>
             </div>
@@ -271,17 +267,10 @@
         </div>
     </section>
 
-    <!--<section class="mediosdepago">
-        <div class="mediosdepago__div">
-            <h3 class="mediosdepago__texto"> <b> Conoce nuestra financiacion  </b></h3>
-            <img class="mediosdepago__img" src="imagenes/formasdepago.jpg">
-
-        </div>
-    </section>
---->
-
+  
+<div class="mediosdePago">
 <h3 class="mediosdepago__texto"> <b> Conoce nuestra financiacion  </b></h3>
-
+</div>
 <section class="carrusel"> 
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
