--- a/web/colchones.html
+++ b/web/colchones.html
@@ -65,9 +65,6 @@
 
         </div>
     </main>
-    <div>
-        <a href="../index.html">inicio</a> > <a href="colchones.html">Colchones</a>
-    </div>
 
     <section id="Nuestroscolchones">
         <div class="nuestros_colchonesdiv">
@@ -77,41 +74,41 @@
         </div>
         <div id="colchonContenedor">
             <div class="contenedor1_colchonesuno">
-                <img class="imagenColchon" src="../imagenes/mattress.png">
+                <img class="imagenColchon" src="../imagenes/promocion4.png">
                 <h2 class="textoColchon">Colchon Piero</h2>
                 <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza suave y media</p>
                 <button class="botonColchones" type="button" href="#">COMPRAR </button>
             </div>
             <div class="contenedor1_colchonesdos">
-                <img class="imagenColchon" src="../imagenes/mattress2.png">
+                <img class="imagenColchon" src="../imagenes/promocion9.png">
                 <h2 class="textoColchon">Colchon Espuma</h2>
                 <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza suave y media</p>
                 <button class="botonColchones" type="button" href="#">COMPRAR </button>
             </div>
 
             <div class="contenedor1_colchonestres">
-                <img class="imagenColchon" src="../imagenes/mattress3.png">
+                <img class="imagenColchon" src="../imagenes/promocion10.png">
                 <h2 class="textoColchon">Colchon Gama</h2>
                 <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza suave </p>
                 <button class="botonColchones" type="button" href="#">COMPRAR </button>
             </div>
 
             <div class="contenedor1_colchonescuatr">
-                <img class="imagenColchon" src="../imagenes/mattres4.png">
+                <img class="imagenColchon" src="../imagenes/promocion11.png">
                 <h2 class="textoColchon">Colchon Paris</h2>
                 <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza media</p>
                 <button class="botonColchones" type="button" href="#">COMPRAR </button>
             </div>
 
             <div class="contenedor1_colchonescinco">
-                <img class="imagenColchon" src="../imagenes/mattres5.png">
+                <img class="imagenColchon" src="../imagenes/promocion12.png">
                 <h2 class="textoColchon">Colchon California</h2>
                 <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza muy firme</p>
                 <button class="botonColchones" type="button" href="#">COMPRAR </button>
             </div>
 
             <div class="contenedor1_colchonesseis">
-                <img class="imagenColchon" src="../imagenes/mattres6.png">
+                <img class="imagenColchon" src="../imagenes/promocion13.png">
                 <h2 class="textoColchon">Colchon Madrid</h2>
                 <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza firme</p>
                 <button class="botonColchones" type="button" href="#">COMPRAR </button>
