--- a/web/sommier.html
+++ b/web/sommier.html
@@ -62,13 +62,11 @@
     </header>
     <main>
         <div class="bannersommier">
-            <h1>Sommiers</h1>
+            <h1> </h1>
         </div>
     </main>
     <br>
-    <div>
-        <a href="../index.html">inicio</a> > <a href="sommier.html">Sommier</a>
-    </div>
+    
     <section class="comodidad">
         <div class="comodidad__info">
             <h3 class="text-center">Como comprar por grado de comodidad: </h3>
@@ -140,33 +138,33 @@
         <br>
         <div id="SommierContenedor">
             <div class="sommmier__contenedor">
-                <img class="imagenSommier" src="../imagenes/zafiro.png">
+                <img class="imagenSommier" src="../imagenes/promocion1.png">
                 <h2 class="sommierTexto">Sommier Zafiro</h2>
                 <p>Altura24cm. Con resortes.<br> Grado de comodidad: Suave</p>
                 <button class="button__sommier" href="#">COMPRAR </button>
             </div>
             <div class="sommmier__contenedor">
-                <img class="imagenSommier" src="../imagenes/diamante.png">
+                <img class="imagenSommier" src="../imagenes/promociones7.png">
                 <h2 class="sommierTexto">Sommier Londres</h2>
                 <p>Altura 40cm. Superpillow c/memoria.<br> Grado de comodidad: Medio</p>
                 <button class="button__sommier" href="#">COMPRAR </button>
             </div>
             <div class="sommmier__contenedor">
-                <img class="imagenSommier" src="../imagenes/sommier duo luna del sur PAINT.jpg">
+                <img class="imagenSommier" src="../imagenes/promocion3.png">
                 <h2 class="sommierTexto">Sommier Duo</h2>
                 <p>Altura 30cm. Espuma alta densidad.<br> Grado de comodidad: Medio</p>
                 <button class="button__sommier" href="#">COMPRAR </button>
             </div>
 
             <div class="sommmier__contenedor">
-                <img class="imagenSommier" src="../imagenes/Sdeluxe1.png">
+                <img class="imagenSommier" src="../imagenes/promocion5.png">
                 <h2 class="sommierTexto">Sommier California</h2>
                 <p>Altura 28cm. Doble Europillow.<br> Grado de comodidad: Firme</p>
                 <button class="button__sommier" href="#">COMPRAR </button>
             </div>
 
             <div class="sommmier__contenedor">
-                <img class="imagenSommier" src="../imagenes/diamante.png">
+                <img class="imagenSommier" src="../imagenes/promocion6.png">
                 <h2 class="sommierTexto">Sommier Diamante</h2>
                 <p>Altura 30cm. Superpillow Soft.<br> Grado de comodidad: Muy Firme</p>
                 <button class="button__sommier" href="#">COMPRAR </button>
@@ -174,7 +172,7 @@
 
 
             <div class="sommmier__contenedor">
-                <img class="imagenSommier" src="../imagenes/sdeluxe15.png">
+                <img class="imagenSommier" src="../imagenes/promocion7.png">
                 <h2 class="sommierTexto">Sommier Aaron</h2>
                 <p>Altura 34cm. Superpillow c/memoria.<br> Tension dividida</p>
                 <button class="button__sommier" href="#">COMPRAR </button>
