--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/medios/5.png" class="d-block1 " alt="...">
+            <img src="medios/5.png" class="d-block1 " alt="...">
           </div>
           <div class="carousel-item">
             <img src="medios/6.png" class="d-block1 " alt="...">
