cambios en formulario

--- a/web/contactanos.html
+++ b/web/contactanos.html
@@ -78,8 +78,8 @@
     </ul>
 </div>
 
-<h3 class="text__h3" id="contact">¿Sugerencia? ¿Queja? ¿Duda? Déjanos un mensaje y te vamos a responder lo antes
-    posible. </h3>
+<h3 class="text__h3" id="contact"> <a class="text__texto">¿Sugerencia? ¿Queja? ¿Duda? Déjanos un mensaje y te vamos a responder lo antes
+    posible. </a></h3>
 
 
     <div class="flex__conteiner">
