--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navegacion">
         <div id="logotipo">
             <a class="logotipo__ref" href="index.html">
-                <img class="logotipo__img" src="imagenes/logo2.png">
+                <img class="logotipo__img" src="imagenes/logo3.png">
             </a>
 
             <ul class="navegacion__menu">
@@ -157,7 +157,7 @@
     <section id="promociones">
 
         <div class="promociones__div">
-            <h2 class="promociones__titulo">Productos Destacados:</h2>
+            <h2 class="promociones__titulo1">Productos Destacados:</h2>
         </div>
 
         <div class="contenedor">
