cambios en contactos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navegacion">
         <div id="logotipo">
             <a class="logotipo__ref" href="index.html">
-                <img class="logotipo__img" src="imagenes/logo3.png">
+                <img class="logotipo__img" src="imagenes/logo2.png">
             </a>
 
             <ul class="navegacion__menu">
@@ -255,7 +255,7 @@
             </table>
         </div>
         <div class="contenedor__consejos2">
-            <h2> Que tamaño de colchon es el adecuado para ti</h2>
+            <h2 class="contenedor__consejoTitulo"> Que tamaño de colchon es el adecuado para ti</h2>
             <p> Elegir qué tamaño de colchón comprar no es fácil, especialmente considerando la variedad de opciones
                 disponibles. <br>El tamaño del colchón es una preferencia individual, pero comprender las dimensiones
                 específicas y sus propias expectativas lo ayudará a reducir el tamaño de la cama que mejor se adapte a
