--- a/web/sommier.html
+++ b/web/sommier.html
@@ -19,7 +19,7 @@
     <nav class="navegacion">
         <div id="logotipo">
             <a class="logotipo__ref" href="../index.html">
-                <img class="logotipo__img" src="../imagenes/logo3.png">
+                <img class="logotipo__img" src="../imagenes/logo2.png">
             </a>
 
             <ul class="navegacion__menu">
@@ -67,9 +67,14 @@
     </main>
     <br>
     
+    <secion class="pricipal">
+        <h1 class="opciones__sommier">Sommiers </h1>
+       
+    </secion>
+
     <section class="comodidad">
         <div class="comodidad__info">
-            <h3 class="text-center">Como comprar por grado de comodidad: </h3>
+            <h3 class="text-center2">Como comprar por grado de comodidad: </h3>
         </div>
 
         <div class="accordion" id="accordionExample">
@@ -133,8 +138,7 @@
 
 
     <section class="opcionesSommier">
-        <h1 class="opciones__sommier">Sommiers: </h1>
-        <p class="sommier__p">Mide tu cama para conseguir el ajuste perfecto para dormir lo mejor posible.</p>
+        <h2 class="opciones__sommier2"> Elegi el que mejor se adapte a vos...</h2>
         <br>
         <div id="SommierContenedor">
             <div class="sommmier__contenedor">
@@ -184,13 +188,12 @@
 
     <secion class="informacionElegir">
         <div class="info__elegir">
+            <h3 class="titulo__info">Elegir el mejor grado de comodidad del colchón</h3>
             <p class="text-sm-start"> Cuando se trata de Sommiers, no se trata de un estilo único para todos. Hay una
                 variedad de formas en las que puede adaptar su colchón para garantizar una buena noche de sueño. Puede
                 filtrar su colchón según el tipo que busque, desde el resorte tradicional hasta el gel, pero también
                 según el grado de comodidad y el tamaño. Explore nuestra selección de colchones en línea o siga leyendo
-                para obtener más información sobre lo que está disponible.</p>
-            <h3 class="titulo__info">Elegir el mejor grado de comodidad del colchón</h3>
-            <p class="text-sm-start">
+                para obtener más información sobre lo que está disponible.
                 Cada tipo de colchón también varía según el grado de comodidad, desde suave hasta muy firme. Cada grado
                 de comodidad tiene sus ventajas, y el adecuado para usted depende de sus preferencias personales, pero
                 también de su posición preferida para dormir.
@@ -206,14 +209,14 @@
                 Por último, los colchones firmes también se recomiendan para quienes duermen boca arriba. Esto se debe a
                 que ofrecen el mayor apoyo de todos los colchones y es muy importante que la columna mantenga su
                 alineación natural.
-
                 Para asegurarnos de que está completamente satisfecho con su nueva compra, también ofrecemos una
                 fantástica garantía de comodidad de 40 noches para que pueda cambiar por una alternativa si no se siente
                 100% cómodo.
-                <br>
+               <b>
+            <br>
                 Entendemos que elegir un colchón en línea es difícil, por lo que si tiene alguna pregunta, contactanos a
                 nuestro <a href="https://www.whatsapp.com/?lang=es" target="_blank"> Whatsapp</a>
-
+            </b>
             </p>
 
         </div>
