--- a/web/colchones.html
+++ b/web/colchones.html
@@ -19,7 +19,7 @@
     <nav class="navegacion">
         <div id="logotipo">
             <a class="logotipo__ref" href="../index.html">
-                <img class="logotipo__img" src="../imagenes/logo3.png">
+                <img class="logotipo__img" src="../imagenes/logo2.png">
             </a>
 
             <ul class="navegacion__menu">
@@ -69,7 +69,7 @@
     <section id="Nuestroscolchones">
         <div class="nuestros_colchonesdiv">
             <h2 class="nuestros__colchones">Nuestros colchones</h2>
-            <p class="historia"> Un buen colchon se siente con un buen descanso
+            <p class="historia"> Un buen colchon se siente con un buen descanso...
             </p>
         </div>
         <div id="colchonContenedor">
@@ -122,7 +122,7 @@
                 <h2> Informate sobre nuestros colchones</h2>
                 <br>
                 <h3 class="consejo__informacion">Colchon Piero</h3>
-                <p>Al ofrecer una lujosa cantidad de espacio, los tamaños de colchones King dan a las parejas el
+                <p class="consejo__parrafo">Al ofrecer una lujosa cantidad de espacio, los tamaños de colchones King dan a las parejas el
                     equivalente
                     al tamaño de un colchón Twin XL para ellos mismos. Las camas tamaño king se colocan encima de dos
                     somieres gemelos unidos para facilitar la maniobra de una cama tamaño king completa en una
@@ -139,7 +139,7 @@
 
             <div class="consejos2__informacion">
                 <h3 class="consejo__informacion">Tamaño del colchón Queen</h3>
-                <p>Las dimensiones del tamaño de la cama Queen son las más populares porque son quizás el tamaño de cama
+                <p class="consejo__parrafo">Las dimensiones del tamaño de la cama Queen son las más populares porque son quizás el tamaño de cama
                     más versátil. Los colchones tamaño queen brindan a las personas que duermen el espacio suficiente
                     para dormir cómodamente y, al mismo tiempo, caben en habitaciones más pequeñas.
                     Lo mejor para parejas adultas o personas que duermen solos y que buscan un tamaño de colchón que no
@@ -148,7 +148,7 @@
 
             <div class="consejos2__informacion">
                 <h3 class="consejo__informacion">Tamaño del colchón Completo</h3>
-                <p> Los colchones de tamaño completo ofrecen un buen compromiso entre los colchones gemelos y los de
+                <p class="consejo__parrafo"> Los colchones de tamaño completo ofrecen un buen compromiso entre los colchones gemelos y los de
                     tamaño queen. Una cama de tamaño completo ofrece una buena cantidad de espacio para los que duermen
                     solos y es una buena opción de tamaño de cama para un dormitorio de invitados.
                     Lo mejor para los adolescentes que han superado las camas de su infancia y las personas que tienen
