--- a/web/contactanos.html
+++ b/web/contactanos.html
@@ -11,6 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Scheherazade+New&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="../imagenes/iconoweb.png"/> 
     <title>SommierDeluxe</title>
     <script src="https://kit.fontawesome.com/403546b4d7.js" crossorigin="anonymous"></script>
 </head>
@@ -19,7 +20,7 @@
     <nav class="navegacion">
         <div id="logotipo">
             <a class="logotipo__ref" href="../index.html">
-                <img class="logotipo__img" src="../imagenes/logo3.png">
+                <img class="logotipo__img" src="../imagenes/logo2.png">
             </a>
 
             <ul class="navegacion__menu">
@@ -65,8 +66,6 @@
             <h1>Contactanos </h1>
         </div>
     </main>
-
-
 
 <div class="contactInfo">
     <iframe data-aos="fade-right" title="Location"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0167132768424!2d-58.38375908477038!3d-34.60373888045957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1633836852420!5m2!1ses-419!2sar" allowfullscreen="" loading="lazy" class="contactInfo__gmap" ></iframe>
