--- a/web/sommier.html
+++ b/web/sommier.html
@@ -11,6 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Scheherazade+New&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="../imagenes/iconoweb.png"/> 
     <title>SommierDeluxe  </title>
     <script src="https://kit.fontawesome.com/403546b4d7.js" crossorigin="anonymous"></script>
 </head>
