--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
 
+    <!---
     <nav class="navegacion">
         <div id="logotipo">
             <a class="logotipo__ref" href="index.html">
@@ -60,8 +61,44 @@
             </ul>
         </div>
     </nav>
+--->
+<nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid1">
+      <a class="navbar-brand" href="#">
+          <img class="logotipo__img" src="imagenes/logo2.png">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+          </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="web/colchones.html">Colchones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="web/sommier.html">Sommier</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link "  href="web/contactanos.html">Contactanos</a>
+          </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link "  href="web/quienes.html">Nosotros</a>
+          </li>
 
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="¿Que estas buscando?" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
+
+        
+      </div>
+    </div>
+  </nav>
 
     <main>
         <div class="banner">
@@ -79,7 +116,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="container-fluid">
-                    <div class="row d-flex justify-content-evenly container-fluid">
+                    <div class="row d-flex1 justify-content-evenly container-fluid">
                         <div class="col-4 carouselGallery__imgContainer">
                             <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes1.png">
                         </div>
@@ -95,7 +132,7 @@
 
             <div class="carousel-item">
                 <div class="container-fluid ">
-                    <div class="row d-flex justify-content-evenly container-fluid">
+                    <div class="row d-flex1 justify-content-evenly container-fluid">
                         <div class="col-4 carouselGallery__imgContainer">
                             <img class="d-block carouselGallery__img"alt="SommierDeluxe"  src="imagenes/deluxes4.png">
                         </div>
@@ -111,7 +148,7 @@
 
             <div class="carousel-item">
                 <div class="container-fluid ">
-                    <div class="row d-flex justify-content-evenly container-fluid">
+                    <div class="row d-flex1 justify-content-evenly container-fluid">
                         <div class="col-4 carouselGallery__imgContainer">
                             <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes7.png">
                         </div>
@@ -127,7 +164,7 @@
             
             <div class="carousel-item">
                 <div class="container-fluid ">
-                    <div class="row d-flex justify-content-evenly container-fluid">
+                    <div class="row d-flex1 justify-content-evenly container-fluid">
                         <div class="col-4 carouselGallery__imgContainer">
                             <img class="d-block carouselGallery__img" alt="SommierDeluxe" src="imagenes/deluxes10.png">
                         </div>
@@ -326,7 +363,7 @@
             </div>
 
             <div class="pie__new">
-                <label for="uname">Subscribite a nuestro Newstaler </label>
+                <label for="uname">Subscribite a nuestro Newsletter </label>
                 <input type="mail" id="mail" name="mail" placeholder="Correo Electronico">
             </div>
         </div>
