arreglos en las medias querys de index

--- a/web/contactanos.html
+++ b/web/contactanos.html
@@ -125,6 +125,7 @@
             <div class="pie__new">
                 <label for="uname">Subscribite a nuestro Newsletter : </label>
                 <input type="mail" id="mail" name="mail" placeholder="Correo Electronico">
+                <a class="mapa" href="mapa.html"> <h3 class="mapa__titulo">Mapa de sitio</h3></a>
             </div>
         </div>
     </footer>
