--- a/web/quienes.html
+++ b/web/quienes.html
@@ -63,10 +63,10 @@
     </main>
     <br>
    
-        
+
 <div class="nosotrosFoto">
     <div class="nosotrosFoto__foto1">
-        <img src="../imagenes/carrusel.png">
+        <img class="nosotrosFoto__foto2"src="../imagenes/carrusel.png">
         </div>
 
 
@@ -79,29 +79,6 @@
 </div>
     </div>
 
-
-
-    <!---
-    <section class="envio_principal">
-        <div class="envios__inicio">
-            <div class="envio_giro">
-                <div class="giroY">
-
-                    <p> Envios sin cargo en CABA </p>
-
-                </div>
-            </div>
-            <div class="envio_giro">
-                <div class="giroY1">
-
-                    <p> Envios a todo el pais </p>
-
-                </div>
-            </div>
-        </div>
-
-    </section>
-    -->
 
     <footer>
         <div class="pie">
@@ -130,6 +107,7 @@
             <div class="pie__new">
                 <label for="uname">Subscribite a nuestro Newsletter </label>
                 <input type="mail" id="mail" name="mail" placeholder="Correo Electronico">
+                <a class="mapa" href="mapa.html"> <h3 class="mapa__titulo">Mapa de sitio</h3></a>
             </div>
         </div>
     </footer>
