arreglos en nav

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
     <div class="promociones__div">
-        <h2 class="promociones__titulo">Ideas para tu habitacion:</h2>
+        <h2 class="promociones__divtitulo">IDEAS PARA TU HABITACION:</h2>
     </div>
 
     <div data-aos="fade-left" id="carouselGalleryA"
@@ -156,7 +156,7 @@
     <section id="promociones">
 
         <div class="promociones__div">
-            <h2 class="promociones__titulo1">Productos Destacados:</h2>
+            <h2 class="promociones__titulo1">PRODUCTOS DESTACADOS:</h2>
         </div>
 
         <div class="contenedor">
@@ -255,7 +255,7 @@
         </div>
         <div class="contenedor__consejos2">
             <h2 class="contenedor__consejoTitulo"> Que tamaño de colchon es el adecuado para ti</h2>
-            <p> Elegir qué tamaño de colchón comprar no es fácil, especialmente considerando la variedad de opciones
+            <p class="contenedor__parrafo"> Elegir qué tamaño de colchón comprar no es fácil, especialmente considerando la variedad de opciones
                 disponibles. <br>El tamaño del colchón es una preferencia individual, pero comprender las dimensiones
                 específicas y sus propias expectativas lo ayudará a reducir el tamaño de la cama que mejor se adapte a
                 sus necesidades.<br> Cuando esté considerando qué tamaño de cama comprar, algunos factores a considerar
