--- a/web/colchones.html
+++ b/web/colchones.html
@@ -63,7 +63,7 @@
 
     <section id="Nuestroscolchones">
         <div class="nuestros_colchonesdiv">
-            <h2 class="nuestros__colchones">Nuestros colchones</h2>
+            <h2 class="nuestros__colchones">NUESTROS COLCHONES</h2>
             <p class="historia"> Un buen colchon se siente con un buen descanso...
             </p>
         </div>
@@ -114,7 +114,7 @@
     <section>
         <div class="consejos2">
             <div class="consejos2__informacion">
-                <h2> Informate sobre nuestros colchones</h2>
+                <h2> INFORMATE SOBRE NUESTROS COLCHONES</h2>
                 <br>
                 <h3 class="consejo__informacion">Colchon Piero</h3>
                 <p class="consejo__parrafo">Al ofrecer una lujosa cantidad de espacio, los tamaños de colchones King dan a las parejas el
@@ -155,11 +155,11 @@
 
     <section class="datosColchones">
         <h2 class="dato__titulo">
-            Déjanos contarte…
+            Déjanos contarte todas las ventajas que tiene dormir en un buen colchón.
         </h2>
 
         <P class="dato__parrafo">
-            …todas las ventajas que tiene dormir en un buen colchón.
+     
         </P>
         <div class="dato__conteiner">
             <div class="dato__primero">
