--- a/web/sommier.html
+++ b/web/sommier.html
@@ -63,7 +63,7 @@
     <br>
     
     <secion class="pricipal">
-        <h1 class="opciones__sommier">Sommiers </h1>
+        <h1 class="opciones__sommier">SOMMIERS </h1>
        
     </secion>
 
