cambios en colchones y ctc

--- a/web/colchones.html
+++ b/web/colchones.html
@@ -114,7 +114,7 @@
     <section>
         <div class="consejos2">
             <div class="consejos2__informacion">
-                <h2> INFORMATE SOBRE NUESTROS COLCHONES</h2>
+                <h2 class="consejos2__titulo"> INFORMATE SOBRE NUESTROS COLCHONES</h2>
                 <br>
                 <h3 class="consejo__informacion">Colchon Piero</h3>
                 <p class="consejo__parrafo">Al ofrecer una lujosa cantidad de espacio, los tamaños de colchones King dan a las parejas el
