--- a/web/colchones.html
+++ b/web/colchones.html
@@ -129,7 +129,7 @@
                     especialmente si comparten la cama con mascotas grandes o niños pequeños y encuentran un colchón
                     tamaño
                     queen que carece de espacio. La mayoría de los dormitorios principales pueden acomodar una cama
-                    king-size..</p>
+                    king-size.</p>
             </div>
 
             <div class="consejos2__informacion">
