--- a/index.html
+++ b/index.html
@@ -162,51 +162,40 @@
             <div class="contenedor__uno">
                 <img class="contenedor__imagenPrincipal" src="imagenes/promocion7.png">
                 <h2 class="contenedor__texto"> Sommier Buzios</h2>
-                <p class="contenedor__p-descripion">Mix de espumas de altidad densidad que generan un confort
-                    equilibrado</p>
+                <p class="contenedor__p-descripion">Mix de espumas de altidad densidad </p>
                 <button class="contenedor__buttoncash"> <a href="../web/contactanos.html ">COMPRAR </a></button>
             </div>
             <div class="contenedor__dos">
                 <img class="contenedor__imagenPrincipal" src="imagenes/promocion3.png">
                 <h2 class="contenedor__textoPrincipal"> Sommier Zafiro </h2>
-                <p class="contenedor__p-descripion">Novedosa tecnologia que permite no rotar el colchon, estructura
-                    ergonomica
-                    que asegura una correcta postura</p>
+                <p class="contenedor__p-descripion">Novedosa tecnologia que permite no rotar el colchon, estructura</p>
                 <button class="contenedor__buttoncash"> <a href="../web/contactanos.html">COMPRAR </a></button>
             </div>
             <div class="contenedor__tres">
                 <img class="contenedor__imagenPrincipal" src="imagenes/promocion4.png">
                 <h2 class="contenedor__textoPrincipal">Sommier Casablanca</h2>
-                <p class="contenedor__p-descripion">Manta adicional de confort par aliviar los pntos de presion, nueva
-                    tecnologia
-                    para no rotar el colchon</p>
+                <p class="contenedor__p-descripion">Manta adicional de confort par aliviar los pntos de presion</p>
                 <button class="contenedor__buttoncash"> <a href="web/sommier.html "> COMPRAR </a></button>
             </div>
 
             <div class="contenedor__cuatro">
                 <img class="contenedor__imagenPrincipal" src="imagenes/promocion5.png">
                 <h2 class="contenedor__textoPrincipal">Sommier Casablanca</h2>
-                <p class="contenedor__p-descripion">Resortes de alta densidad aseguran una correcta postura y logran el
-                    confort
-                    esperado.</p>
+                <p class="contenedor__p-descripion">Resortes de alta densidad.</p>
                 <button class="contenedor__buttoncash"><a href="../web/contactanos.html "> COMPRAR </a></button>
             </div>
 
             <div class="contenedor__cinco">
                 <img class="contenedor__imagenPrincipal" src="imagenes/promocion6.png">
                 <h2 class="contenedor__textoPrincipal">Sommier Casablanca</h2>
-                <p class="contenedor__p-descripion">Nuestro sommier es una combinacion de espuma de alta densidad y
-                    espuma
-                    viscoelastica que asegura el maximo confort. </p>
+                <p class="contenedor__p-descripion">Nuestro sommier de espuma de alta densidad  </p>
                 <button class="contenedor__buttoncash"> <a href="../web/contactanos.html ">COMPRAR </a></button>
             </div>
 
             <div class="contenedor__seis">
                 <img class="contenedor__imagenPrincipal" src="imagenes/promociones7.png">
                 <h2 class="contenedor_textoPrincipal">Sommier Casablanca</h2>
-                <p class="contenedor__p-descripion">Refuerzo en la zona lumbar par mejorar la postura al descansar. Tela
-                    de punto
-                    matelaseado. Hipoalergénica </p>
+                <p class="contenedor__p-descripion">Refuerzo en la zona lumbar para mejorar la postura al descansar. </p>
                 <button class="contenedor__buttoncash"> <a href="../web/contactanos.html ">COMPRAR </a></button>
             </div>
         </div>
