--- a/web/colchones.html
+++ b/web/colchones.html
@@ -71,42 +71,42 @@
             <div class="contenedor1_colchonesuno">
                 <img class="imagenColchon" src="../imagenes/promocion4.png">
                 <h2 class="textoColchon">Colchon Piero</h2>
-                <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza suave y media</p>
+                <p class="colchon__parrafo"> Firmeza suave y media</p>
                 <button class="botonColchones" type="button" href="#">COMPRAR </button>
             </div>
             <div class="contenedor1_colchonesdos">
                 <img class="imagenColchon" src="../imagenes/promocion9.png">
                 <h2 class="textoColchon">Colchon Espuma</h2>
-                <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza suave y media</p>
+                <p class="colchon__parrafo"> Firmeza suave y media</p>
                 <button class="botonColchones" type="button" href="#">COMPRAR </button>
             </div>
 
             <div class="contenedor1_colchonestres">
                 <img class="imagenColchon" src="../imagenes/promocion10.png">
                 <h2 class="textoColchon">Colchon Gama</h2>
-                <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza suave </p>
+                <p class="colchon__parrafo"> Firmeza suave </p>
                 <button class="botonColchones" type="button" href="#">COMPRAR </button>
             </div>
 
             <div class="contenedor1_colchonescuatr">
                 <img class="imagenColchon" src="../imagenes/promocion11.png">
                 <h2 class="textoColchon">Colchon Paris</h2>
-                <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza media</p>
-                <button class="botonColchones" type="button" href="#">COMPRAR </button>
+                <p class="colchon__parrafo"> Firmeza media</p>
+                <button class="botonColchones" type="button" href="contactanos.html">COMPRAR </button>
             </div>
 
             <div class="contenedor1_colchonescinco">
                 <img class="imagenColchon" src="../imagenes/promocion12.png">
                 <h2 class="textoColchon">Colchon California</h2>
-                <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza muy firme</p>
+                <p class="colchon__parrafo"> Firmeza muy firme</p>
                 <button class="botonColchones" type="button" href="#">COMPRAR </button>
             </div>
 
             <div class="contenedor1_colchonesseis">
                 <img class="imagenColchon" src="../imagenes/promocion13.png">
                 <h2 class="textoColchon">Colchon Madrid</h2>
-                <p class="colchon__parrafo"> Colchón de muelles ensacados y viscoelástica - Firmeza firme</p>
-                <button class="botonColchones" type="button" href="#">COMPRAR </button>
+                <p class="colchon__parrafo"> Firmeza firme</p>
+                <button class="botonColchones" type="button" href="#" style="margin-top: 55px;">COMPRAR </button>
             </div>
         </div>
     </section>
