--- a/web/sommier.html
+++ b/web/sommier.html
@@ -146,7 +146,7 @@
                 <img class="imagenSommier" src="../imagenes/promociones7.png">
                 <h2 class="sommierTexto">Sommier Londres</h2>
                 <p>Altura 40cm. Superpillow c/memoria.<br> Grado de comodidad: Medio</p>
-                <button class="button__sommier" href="#">COMPRAR </button>
+                <button class="button__sommier" href="#" style="margin-top: 10px;">COMPRAR </button>
             </div>
             <div class="sommmier__contenedor">
                 <img class="imagenSommier" src="../imagenes/promocion3.png">
@@ -174,7 +174,7 @@
                 <img class="imagenSommier" src="../imagenes/promocion7.png">
                 <h2 class="sommierTexto">Sommier Aaron</h2>
                 <p>Altura 34cm. Superpillow c/memoria.<br> Tension dividida</p>
-                <button class="button__sommier" href="#">COMPRAR </button>
+                <button class="button__sommier" href="#" style="margin-top: 55px;">COMPRAR </button>
             </div>
         </div>
     </section>
