--- a/web/sommier.html
+++ b/web/sommier.html
@@ -146,12 +146,12 @@
                 <img class="imagenSommier" src="../imagenes/promociones7.png">
                 <h2 class="sommierTexto">Sommier Londres</h2>
                 <p>Altura 40cm. Superpillow c/memoria.<br> Grado de comodidad: Medio</p>
-                <button class="button__sommier" href="#" style="margin-top: 10px;">COMPRAR </button>
+                <button class="button__sommier" href="#" style="margin-top: 5px;">COMPRAR </button>
             </div>
             <div class="sommmier__contenedor">
                 <img class="imagenSommier" src="../imagenes/promocion3.png">
                 <h2 class="sommierTexto">Sommier Duo</h2>
-                <p>Altura 30cm. Espuma alta densidad.<br> Grado de comodidad: Medio</p>
+                <p>Altura 30cm.<br> Grado de comodidad: Medio</p>
                 <button class="button__sommier" href="#">COMPRAR </button>
             </div>
 
@@ -159,7 +159,7 @@
                 <img class="imagenSommier" src="../imagenes/promocion5.png">
                 <h2 class="sommierTexto">Sommier California</h2>
                 <p>Altura 28cm. Doble Europillow.<br> Grado de comodidad: Firme</p>
-                <button class="button__sommier" href="#">COMPRAR </button>
+                <button class="button__sommier" href="#" style=" margin-top:5px;">COMPRAR </button>
             </div>
 
             <div class="sommmier__contenedor">
