cambios varios mediaqueries

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <section id="promociones">
 
-        <div class="promociones__div">
+        <div class="promociones__div2">
             <h2 class="promociones__titulo1">PRODUCTOS DESTACADOS:</h2>
         </div>
 
