--- a/web/sommier.html
+++ b/web/sommier.html
@@ -151,14 +151,14 @@
             <div class="sommmier__contenedor">
                 <img class="imagenSommier" src="../imagenes/promocion3.png">
                 <h2 class="sommierTexto">Sommier Duo</h2>
-                <p>Altura 30cm. Espuma alta densidad.<br> Grado de comodidad: Medio</p>
+                <p>Altura 30cm.<br> Grado de comodidad: Medio</p>
                 <button class="button__sommier" href="#">COMPRAR </button>
             </div>
 
             <div class="sommmier__contenedor">
                 <img class="imagenSommier" src="../imagenes/promocion5.png">
                 <h2 class="sommierTexto">Sommier California</h2>
-                <p>Altura 28cm. Doble Europillow.<br> Grado de comodidad: Firme</p>
+                <p>Altura 28cm.<br> Grado de comodidad: Firme</p>
                 <button class="button__sommier" href="#">COMPRAR </button>
             </div>
 
