cambios en sommir

--- a/web/sommier.html
+++ b/web/sommier.html
@@ -158,8 +158,8 @@
             <div class="sommmier__contenedor">
                 <img class="imagenSommier" src="../imagenes/promocion5.png">
                 <h2 class="sommierTexto">Sommier California</h2>
-                <p>Altura 28cm. Doble Europillow.<br> Grado de comodidad: Firme</p>
-                <button class="button__sommier" href="#" style=" margin-top:5px;">COMPRAR </button>
+                <p>Altura 28cm.<br> Grado de comodidad: Firme</p>
+                <button class="button__sommier" href="#">COMPRAR </button>
             </div>
 
             <div class="sommmier__contenedor">
@@ -174,7 +174,7 @@
                 <img class="imagenSommier" src="../imagenes/promocion7.png">
                 <h2 class="sommierTexto">Sommier Aaron</h2>
                 <p>Altura 34cm. Superpillow c/memoria.<br> Tension dividida</p>
-                <button class="button__sommier" href="#" style="margin-top: 55px;">COMPRAR </button>
+                <button class="button__sommier" href="#" >COMPRAR </button>
             </div>
         </div>
     </section>
